# ragchatbot-claud-code

./: .flake8  .gitignore  CLAUDE.md  pyproject.toml  query_flow_diagram.md
backend/: ai_generator.py  app.py  document_processor.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_config.py  test_course_search_tool.py  test_rag_integration.py
frontend/: style.css
scripts/: check.sh  format.sh  lint.sh  quality.sh  test.sh
